--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,9 @@
-backports.csv==1.0.7
-beautifulsoup4==4.8.1
-bs4==0.0.1
-certifi==2019.9.11
-chardet==3.0.4
-defusedxml==0.6.0
-diff-match-patch==20181111
-Django==2.2.6
-django-allauth==0.40.0
-django-crispy-forms==1.7.2
-django-excel==0.0.10
-django-import-export==1.2.0
+  
+asgiref==3.2.3
+Django==3.0.1
 djangorestframework==3.11.0
-et-xmlfile==1.0.1
-Faker==2.0.3
-httpie==1.0.3
-idna==2.8
-jdcal==1.4.1
-lml==0.0.9
-lxml==4.4.1
-oauthlib==3.1.0
-odfpy==1.4.0
-openpyxl==3.0.0
-Pillow==6.2.0
-pycryptodome==3.9.0
-pyexcel==0.5.15
-pyexcel-io==0.5.20
-pyexcel-webio==0.1.4
-Pygments==2.5.2
-python-dateutil==2.8.1
-python3-openid==3.1.0
+pkg-resources==0.0.0
 pytz==2019.3
-PyYAML==5.1.2
-requests==2.22.0
-requests-oauthlib==1.2.0
-selenium==3.141.0
-six==1.12.0
-soupsieve==1.9.4
 sqlparse==0.3.0
-tablib==0.13.0
-text-unidecode==1.3
-texttable==1.6.2
-urllib3==1.25.6
-xlrd==1.2.0/Users/harshagarwal/Desktop/req/requirements.txt
-XlsxWriter==1.2.1
-xlwt==1.3.0
+xlrd==1.2.0
+XlsxWriter==1.2.6
