--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-  
 asgiref==3.2.3
 Django==3.0.1
+django-excel==0.0.10
 djangorestframework==3.11.0
-pkg-resources==0.0.0
+lml==0.0.9
+pyexcel==0.5.15
+pyexcel-io==0.5.20
+pyexcel-webio==0.1.4
 pytz==2019.3
 sqlparse==0.3.0
+texttable==1.6.2
 xlrd==1.2.0
-XlsxWriter==1.2.6
